# pyoak

./: .bumpversion.cfg  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  Taskfile.yml  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  preview.yml  release.yml
benchmarks/: bench_matcher.py  bench_pattern_matcher.py  bench_runtime_checks.py  bench_traversal.py  bench_visitor.py  sample_tree.py
src/pyoak/: __init__.py  _codegen.py  _helpers.py  _methods.py  codegen.py  config.py  error.py  file.py  helpers.py  node.py  origin.py  registry.py  serialize.py  tree.py  types.py  typing.py  visitor.py
src/pyoak/legacy/: __init__.py  error.py  helpers.py  node.py
src/pyoak/legacy/match/: error.py  grammar.py  helpers.py  pattern.py  xpath.py
src/pyoak/match/: element.py  error.py  grammar.py  helpers.py  parser.py  pattern.py  xpath.py
tests/: test_registry.py
tests/pyoak/: conftest.py  test_helpers.py  test_helpers_postponed_ann.py  test_node.py  test_origin.py  test_pattern.py  test_serialize.py  test_transform.py  test_tree.py  test_typing.py  test_typing_postponed_ann.py  test_visitor.py  test_xpath.py
tests/pyoak/legacy/: test_helpers.py  test_helpers_postponed_ann.py  test_node.py  test_pattern.py  test_transform.py  test_visitor.py  test_xpath.py
tests/pyoak/match/: test_helpers.py  test_parser.py  test_pattern.py  test_xpath.py
tests/pyoak/serialize/: subclass.py  test_subclassing.py
