[tool.poetry]
name = "pyoak"
version = "1.0.0"
homepage = "https://github.com/mishamsk/pyoak"
description = "Library for building and working with arbitrary ASTs on top dataclasses"
authors = ["Mike Perlov <mishamsk@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
packages = [{ include = "pyoak", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10"
rich = "^13.5.0"
mashumaro = ">=3.8.1,<3.9"
lark = "1.1.5"
pyyaml = "^6.0.1"
orjson = "^3.9.2"
msgpack = "^1.0.5"
chardet = "^5.1.0"

[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
tox = "^4.6.4"
tox-gh-actions = "^3.1.3"

[tool.poetry.group.pre.dependencies]
ruff = "^0.0.280"
black = "^23.7.0"
pre-commit = "^3.3.3"

[tool.poetry.group.mypy.dependencies]
mypy = "^1.4.1"
types-pyyaml = "^6.0.12.11"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
deepdiff = "^6.3.1"

[tool.poetry.group.publish]
optional = true

[tool.poetry.group.publish.dependencies]
twine = "^4.0.2"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--basetemp=testtemp"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py39"

select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # bugbear
    "PERF",
    "PLC",
    "PLE",
    "RUF",
]
ignore = [
    "E501", # line too long, handled by black
    # "RUF012", # happens in 3rd party libs mostly
]

# Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B", "PERF401"]

[tool.ruff.mccabe]
max-complexity = 18

[tool.ruff.pydocstyle]
convention = "google"

[tool.docformatter]
recursive = true
wrap-summaries = 100
wrap-descriptions = 100
blank = true

[tool.mypy]
ignore_missing_imports = true
show_column_numbers = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
follow_imports = "normal"

[[tool.mypy.overrides]]
module = ["pyoak.*"]

disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
strict_concatenate = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
