[tool.poetry]
name = "pyoak"
version = "3.0.0a1"
homepage = "https://github.com/mishamsk/pyoak"
description = "Library for building and working with arbitrary ASTs on top dataclasses"
authors = ["Mike Perlov <mishamsk@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
packages = [{ include = "pyoak", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10"
rich = ">=12.5.0, <14"
mashumaro = ">=3.8.1"

# Optional serialization dependencies
pyyaml = { version = "^6.0.0", optional = true }
orjson = { version = "^3.8.7", optional = true }
msgpack = { version = "^1.0.4", optional = true }

[tool.poetry.extras]
msgpack = ["msgpack"]
orjson = ["orjson"]
yaml = ["pyyaml"]
all = ["msgpack", "orjson", "pyyaml"]

[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
tox = "^4.11.1"
tox-gh = "^1.3.1"

[tool.poetry.group.pre.dependencies]
ruff = "^0.1.8"
pre-commit = "^3.3.3"

[tool.poetry.group.mypy.dependencies]
mypy = "^1.7.1"
types-pyyaml = "^6.0.12.11"
orjson = "^3.9.10"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
deepdiff = "^6.7.1"

[tool.poetry.group.publish]
optional = true

[tool.poetry.group.publish.dependencies]
twine = "^4.0.2"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--basetemp=testtemp"
testpaths = "tests"
# markers are used to run only selected tests
markers = [
    "dep_msgpack: test msgpack optional dependency",
    "dep_orjson: test orjson optional dependency",
    "dep_pyyaml: test pyyaml optional dependency",
    "dep_ruamel: test ruamel optional dependency",
]

[tool.ruff]
line-length = 100
target-version = "py310"

select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # bugbear
    "PERF",
    "PLC",
    "PLE",
    "RUF",
]
ignore = [
    "E501", # line too long, handled by ruff
    # "RUF012", # happens in 3rd party libs mostly
]

# Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B", "PERF401", "F821"]

[tool.ruff.mccabe]
max-complexity = 18

[tool.ruff.pydocstyle]
convention = "google"

[tool.docformatter]
recursive = true
wrap-summaries = 100
wrap-descriptions = 100
blank = true

[tool.mypy]
ignore_missing_imports = false
show_column_numbers = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
follow_imports = "normal"

mypy_path = "src"

[[tool.mypy.overrides]]
# Ignore import errors for 3rd party libraries with type stubs
module = ["deepdiff.*", "msgpack.*", "ruamel.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pyoak.*"]

disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_return_any = true
strict_equality = true
strict_concatenate = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
